# RustCrud

./: .env  Cargo.toml  diesel.toml
migrations/2024-08-19-141017_create_events/: up.sql
src/: main.rs
src/handlers/: handlers.rs
src/models/: mod.rs  schema.rs
src/repository/: database.rs
